Admin 기능 추가 + API 명세서 수정